--- a/client/src/components/InfoPage/InfoPage_1.css
+++ b/client/src/components/InfoPage/InfoPage_1.css
@@ -21,6 +21,15 @@ button{
     transform: translateX(-50%);
     
 }
+button:disabled{
+  font-family: on;
+  background-color: #d9d9d9;
+  border: none; /* 테두리 제거 */
+  border-radius: 20px; /* 둥근 모서리 */
+  padding: 10px 15px; /* 내부 여백 */
+  cursor: pointer; /* 마우스 커서를 포인터로 변경하여 버튼임을 나타냄 */
+  color:#ffffff ;
+}
 
 
 input[type="text"] {
