--- a/client/src/components/InfoPage/InfoPage_2.css
+++ b/client/src/components/InfoPage/InfoPage_2.css
@@ -91,7 +91,20 @@
   left: 70%;
   color: #3995b9;
 }
-
+/*이전 버튼*/
+.navigator-back{
+  position: absolute;
+  font-family: on;
+  font-size:20px;
+  top:87%;
+  left:3%;
+  background-color: #82d1ff;
+  border: none; /* 테두리 제거 */
+  border-radius: 20px; /* 둥근 모서리 */
+  padding: 10px 5px; /* 내부 여백 */
+  cursor: pointer; /* 마우스 커서를 포인터로 변경하여 버튼임을 나타냄 */
+  color:#ffffff ;
+}
 
 @font-face {
   font-family: "on";
