[feat] 장신구 이미지를 한 번 더 눌러서 착용 해제하는 기능 추가

--- a/client/src/components/shopPage/shop.css
+++ b/client/src/components/shopPage/shop.css
@@ -154,7 +154,13 @@ body {height:100%; overflow:hidden;}
     width: 520px;
 }
 
-
+.image-1 {
+  /* 이미지 1에 대한 스타일 */
+  position: absolute;
+  top: 37%;
+  height: 58%;
+  width: 520px;
+}
 
 .explode-animation {
     position: absolute;
