--- a/client/src/components/shopPage/shop.css
+++ b/client/src/components/shopPage/shop.css
@@ -223,6 +223,35 @@ body {height:100%; overflow:hidden;}
     height: 150px;;
     width: 204px;
   }
+  /*마녀모자 착용시 이미지 조정*/
+  .image-4 {
+    position: absolute;
+    top: 10px;
+    left: 183px;
+    height: 120px;;
+    width: 140px;
+  }
+
+  /*분홍리본 착용시 이미지 조정*/
+  .image-5 {
+    position: absolute;
+    top: 75px;
+    left: 260px;
+    height: 50px;;
+    width: 50px;
+  }
+
+   /*황금왕관 착용시 이미지 조정*/
+   .image-6 {
+    position: absolute;
+    top: 5px;
+    left: 183px;
+    height: 120px;;
+    width: 140px;
+  }
+
+
+  
   
   
   @keyframes slideDown {
