--- a/client/src/components/shopPage/shop.css
+++ b/client/src/components/shopPage/shop.css
@@ -155,6 +155,23 @@ body {height:100%; overflow:hidden;}
     color:black;
     margin: 0 10px;
   }
+
+  .modal-denied h2{
+    font-weight: normal;
+    position: absolute;
+    top :-3%;
+    left:30%;
+  }
+
+  .modal-denied p{
+    padding-top:10%;
+  }
+
+
+  .modal-denied{
+    width:340px;
+    height:120px;
+  }
   
 .pannel_shop{
     position: absolute;
