--- a/client/src/components/WeeklyPage/WeeklyPage.css
+++ b/client/src/components/WeeklyPage/WeeklyPage.css
@@ -118,6 +118,28 @@ body {height:100%; overflow:hidden;}
     margin: 0;
   }
 
+  /*포인트 획득 css 추가 */
+.modal-backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+}
+
+.modal-content {
+  background-color: white;
+  padding: 20px;
+  border-radius: 5px;
+  text-align: center;
+}
+
+
 
  @font-face {
     font-family: "on";
