[feat] 칭찬스티커 다 모을 떄 나오는 모달창과 함께 폭죽 애니메이션 출력 하는 기능 추가

--- a/client/src/components/shopPage/shop.css
+++ b/client/src/components/shopPage/shop.css
@@ -194,6 +194,7 @@ body {height:100%; overflow:hidden;}
     background-repeat: no-repeat;
     animation: explode 0.9s ease-in-out, slideDown 0.55s ease-in-out 0.55s;
     opacity: 0;
+    z-index: 1;
   }
 
   
