--- a/client/src/components/MyPage/MyPage.css
+++ b/client/src/components/MyPage/MyPage.css
@@ -73,7 +73,7 @@
   .profile_input{
     position: absolute;
     top: 33%;
-    left:50%;
+    left: 50%;
     background-color:rgba(255, 255, 255, 0.805);
     border: 3px solid #8CD7F2; 
     border-radius: 15px; 
@@ -82,6 +82,12 @@
     text-align: center;
     width: 40%;
     height: 10%;
+  }
+
+  .userName{
+    font-family: on;
+    padding-left: 10%;
+    position: absolute;
   }
 
   /*이름 수정 버튼*/
