[add] 시간설정 모달 창 css 추가

--- a/client/src/components/MyPage/DetailPage.css
+++ b/client/src/components/MyPage/DetailPage.css
@@ -73,3 +73,19 @@
   .backButton_img{
     width:30%;
   }
+
+  .alarmset_detail{
+    position: absolute;
+    display: flex;
+    gap:10px;
+  }
+
+  .modal_detail{
+    position:absolute;
+    background-color: aliceblue;
+    width: 200px;
+    height: 100px;
+    left:108%;
+    top :-80%;
+  }
+
