[add] 설정한 시간 표시 코드

--- a/client/src/components/MyPage/DetailPage.css
+++ b/client/src/components/MyPage/DetailPage.css
@@ -146,3 +146,19 @@
   top: 5%;
   left:10%;
 }
+
+.alarm-set-time{
+  font-family: on;
+  font-weight: normal;
+}
+
+.alarm-set-time h10{
+  position: relative;
+  font-size: 30px;
+  background-color: aliceblue;
+  left:5%;
+}
+
+.alarm-set-button{
+  position: absolute;
+}
