--- a/client/src/components/WeeklyPage/WeeklyPage.css
+++ b/client/src/components/WeeklyPage/WeeklyPage.css
@@ -56,14 +56,14 @@ body {height:100%; overflow:hidden;}
   /*스탬프*/
   .input {
     position: absolute;
-    left: 0%;
+    left: 10%;
+    width: 80%;
     transform: translate(-50%, -50%);
   }
   
   .howMuchStamp{
     position: absolute;
     top:10px;
-    
     z-index:1;
   }
 
