--- a/client/src/components/navigationBar/NavigationBar.css
+++ b/client/src/components/navigationBar/NavigationBar.css
@@ -8,6 +8,7 @@
   width: 100%;
   background-color: #567441;
   box-shadow: 0 -2px 5px rgba(255, 255, 255, 0.1);
+  z-index: 2000;
 }
 
 .nav-item {
