[add] main에서 착용한 새싹모자 css 수정

--- a/client/src/components/mainPage/Main.css
+++ b/client/src/components/mainPage/Main.css
@@ -255,8 +255,12 @@ h1{
   left: 60%;
 }
 
-.img-custom-style{
+.item1-image-main{
   position: absolute;
   z-index:900;
+  width: 40px;
+  height: 40px;
+  top:370px;
+  left:374px;
 }
 
