--- a/client/src/components/mainPage/Main.css
+++ b/client/src/components/mainPage/Main.css
@@ -297,6 +297,14 @@ h1{
   top:388px;
   left:390px;
 }
+.item6-image-main{
+  position: absolute;
+  z-index:900;
+  width: 69px;
+  height: 50px;
+  top:370px;
+  left:359px;
+}
 
 
 
