[feat] 이름의 최대 글자 수를 6자로 설정하고, 자를 넘을 시 버튼이 비활성화 되며 경고메세지 출력

--- a/client/src/components/InfoPage/InfoPage_1.css
+++ b/client/src/components/InfoPage/InfoPage_1.css
@@ -72,8 +72,14 @@ input[type="text"] {
   left: 60%;
   transform: translateX(-50%);
 }
+.warning{
+  position:absolute;
+  font-family: on;
+  color:gray;
+  top:23%;
+  left: 44%;
+}
 
-  
 @font-face {
   font-family: "on";
   font-weight: 50;
