--- a/client/src/components/InfoPage/InfoPage_1.css
+++ b/client/src/components/InfoPage/InfoPage_1.css
@@ -99,3 +99,48 @@ position: absolute;
 top: 70%;
 left: 10%;
 }
+
+
+.modal-overlay {
+  font-family:on;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.modal_info1 {
+  background: white;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  text-align: center; /* 요소 내부의 텍스트 중앙 정렬 */
+}
+
+.modal_info1_content h2 {
+  margin: 0 0 10px;
+}
+
+.modal_info1_content p {
+  margin: 0 0 20px;
+}
+
+.modal-button {
+  background-color: #4fc4ff;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  margin: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.modal-button:hover {
+  background-color: #0056b3;
+}
