--- a/MeddyBaby/client/src/components/MyPage/MyPage.css
+++ b/MeddyBaby/client/src/components/MyPage/MyPage.css
@@ -183,10 +183,10 @@
   }
   
   /*모달 저장 버튼*/
-  .modal_close_button{
+  .modal_save_button{
     position: relative;
-    top: 10%;
-    left:38%;
+    top: 30%;
+    right: 37%;
     background-color: rgb(126, 197, 255);
     color: #FFFFFF; /* 흰색 */
     border: 3px solid  rgb(126, 197, 255);
